--- a/src/app/admin/leveringen/add-levering/add-levering.component.html
+++ b/src/app/admin/leveringen/add-levering/add-levering.component.html
@@ -1,44 +1,48 @@
 <h1>Voeg levering toe</h1>
 <mat-card id="card">
-    <mat-card-content>
-        <form [formGroup]="addLeveringForm" (ngSubmit)="onSubmit()">
-            <div>
-                <mat-form-field [style.width.px]=700>
-                    <mat-label>Omschrijving</mat-label>
-                    <input matInput type="text" formControlName="omschrijving" />
-                </mat-form-field>
-            </div>
-            <div>
-              <mat-form-field [style.width.px]=700>
-                  <mat-label>Laadkade</mat-label>
-                  <mat-select [(ngModel)]="selectedLaadkade" formControlName="laadkadeID">
-                      <mat-option *ngFor="let laadkade of laadkades" [value]="laadkade.laadkadeID">
-                        {{laadkade.nummer}}
-                      </mat-option>
-                  </mat-select>
-              </mat-form-field>
-          </div>
-          <div>
-            <mat-form-field [style.width.px]=700>
-                <mat-label>Schedule</mat-label>
-                <mat-select [(ngModel)]="schedule.scheduleID" formControlName="scheduleID">
-                    <mat-option *ngFor="let schedule of schedules" [value]="schedule.scheduleID">
-                      Schedule van {{schedule.datum | date:"dd/MM/yyyy"}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field [style.width.px]=700>
-              <mat-label>Leverancier</mat-label>
-              <mat-select [(ngModel)]="selectedLeverancier" formControlName="leverancierID">
-                  <mat-option *ngFor="let leverancier of leveranciers" [value]="leverancier.leverancierID">
-                    {{leverancier.code}} van bedrijf {{leverancier.bedrijf.naam}}
-                  </mat-option>
-              </mat-select>
-          </mat-form-field>
+  <mat-card-content>
+    <form [formGroup]="addLeveringForm" (ngSubmit)="onSubmit()">
+      <div>
+        <mat-form-field class="formfield">
+          <mat-label>Omschrijving</mat-label>
+          <input matInput type="text" formControlName="omschrijving" />
+        </mat-form-field>
+        <control-messages [control]="addLeveringForm.get('omschrijving')" class="errorMessage"></control-messages>
       </div>
-            <button class="button" mat-raised-button color="primary" type="submit">Voeg levering toe</button>
-        </form>
-    </mat-card-content>
+      <div>
+        <mat-form-field class="formfield">
+          <mat-label>Laadkade</mat-label>
+          <mat-select [(ngModel)]="selectedLaadkade" formControlName="laadkadeID">
+            <mat-option *ngFor="let laadkade of laadkades" [value]="laadkade.laadkadeID">
+              {{laadkade.nummer}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <control-messages [control]="addLeveringForm.get('laadkadeID')" class="errorMessage"></control-messages>
+      </div>
+      <div>
+        <mat-form-field class="formfield">
+          <mat-label>Schedule</mat-label>
+          <mat-select [(ngModel)]="selectedSchedule" formControlName="scheduleID">
+            <mat-option *ngFor="let schedule of schedules" [value]="schedule.scheduleID">
+              Schedule van {{schedule.datum | date:"dd/MM/yyyy"}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <control-messages [control]="addLeveringForm.get('scheduleID')" class="errorMessage"></control-messages>
+      </div>
+      <div>
+        <mat-form-field class="formfield">
+          <mat-label>Leverancier</mat-label>
+          <mat-select [(ngModel)]="selectedLeverancier" formControlName="leverancierID">
+            <mat-option *ngFor="let leverancier of leveranciers" [value]="leverancier.leverancierID">
+              {{leverancier.code}} van bedrijf {{leverancier.bedrijf.naam}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <control-messages [control]="addLeveringForm.get('leverancierID')" class="errorMessage"></control-messages>
+      </div>
+      <button class="button" mat-raised-button color="primary" type="submit" [disabled]="!addLeveringForm.valid">Voeg levering toe</button>
+    </form>
+  </mat-card-content>
 </mat-card>
