--- a/src/app/admin/leveringen/edit-levering/edit-levering.component.html
+++ b/src/app/admin/leveringen/edit-levering/edit-levering.component.html
@@ -3,13 +3,14 @@
   <mat-card-content>
     <form [formGroup]="editLeveringForm" (ngSubmit)="onSubmit()">
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Omschrijving</mat-label>
           <input matInput type="text" formControlName="omschrijving" [(ngModel)]="levering.omschrijving" />
         </mat-form-field>
+        <control-messages [control]="editLeveringForm.get('omschrijving')" class="errorMessage"></control-messages>
       </div>
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Laadkade</mat-label>
           <mat-select [(ngModel)]="levering.laadkadeID" formControlName="laadkadeID">
             <mat-option *ngFor="let laadkade of laadkades" [value]="laadkade.laadkadeID">
@@ -17,9 +18,10 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <control-messages [control]="editLeveringForm.get('laadkadeID')" class="errorMessage"></control-messages>
       </div>
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Schedule</mat-label>
           <mat-select [(ngModel)]="levering.scheduleID" formControlName="scheduleID">
             <mat-option *ngFor="let schedule of schedules" [value]="schedule.scheduleID">
@@ -27,9 +29,10 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <control-messages [control]="editLeveringForm.get('scheduleID')" class="errorMessage"></control-messages>
       </div>
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Leverancier</mat-label>
           <mat-select [(ngModel)]="levering.leverancierID" formControlName="leverancierID">
             <mat-option *ngFor="let leverancier of leveranciers" [value]="leverancier.leverancierID">
@@ -37,6 +40,7 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <control-messages [control]="editLeveringForm.get('leverancierID')" class="errorMessage"></control-messages>
       </div>
       <button class="button" mat-raised-button color="primary" type="submit">Bewerk levering</button>
     </form>
