--- a/src/app/admin/leveringen/leveringen/leveringen.component.html
+++ b/src/app/admin/leveringen/leveringen/leveringen.component.html
@@ -1,7 +1,7 @@
 <h1>Leveringen</h1>
 <div class="tableField">
   <mat-card id="card">
-    <mat-form-field>
+    <mat-form-field id="filter">
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Levering" #input>
     </mat-form-field>
