--- a/src/app/admin/producten/edit-product/edit-product.component.html
+++ b/src/app/admin/producten/edit-product/edit-product.component.html
@@ -3,13 +3,14 @@
   <mat-card-content>
     <form [formGroup]="editProductForm" (ngSubmit)="onSubmit()">
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Naam</mat-label>
           <input matInput type="text" formControlName="naam" [(ngModel)]="product.naam" />
         </mat-form-field>
+        <control-messages [control]="editProductForm.get('naam')" class="errorMessage"></control-messages>
       </div>
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Levering</mat-label>
           <mat-select [(ngModel)]="product.leveringID" formControlName="leveringID">
             <mat-option *ngFor="let levering of leveringen" [value]="levering.leveringID">
@@ -17,8 +18,9 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <control-messages [control]="editProductForm.get('leveringID')" class="errorMessage"></control-messages>
       </div>
-      <button class="button" mat-raised-button color="primary" type="submit">Bewerk product</button>
+      <button class="button" mat-raised-button color="primary" type="submit" [disabled]="!editProductForm.valid">Bewerk product</button>
     </form>
   </mat-card-content>
 </mat-card>
