--- a/src/app/admin/role/edit-rol/edit-rol.component.html
+++ b/src/app/admin/role/edit-rol/edit-rol.component.html
@@ -3,13 +3,13 @@
     <mat-card-content>
         <form [formGroup]="editRolForm" (ngSubmit)="onSubmit()">
             <div>
-                <mat-form-field [style.width.px]=700>
+                <mat-form-field class="formfield">
                     <mat-label>Naam</mat-label>
                     <input matInput type="text" formControlName="naam" [(ngModel)]="rol.naam"/>
                 </mat-form-field>
+                <control-messages [control]="editRolForm.get('naam')" class="errorMessage"></control-messages>
             </div>
-
-            <button class="button" mat-raised-button color="primary" type="submit">Bewerk rol</button>
+            <button class="button" mat-raised-button color="primary" type="submit" [disabled]="!editRolForm.valid">Bewerk rol</button>
         </form>
     </mat-card-content>
 </mat-card>
