--- a/src/app/admin/schedules/edit-schedule/edit-schedule.component.html
+++ b/src/app/admin/schedules/edit-schedule/edit-schedule.component.html
@@ -3,20 +3,22 @@
   <mat-card-content>
     <form [formGroup]="editScheduleForm" (ngSubmit)="onSubmit()">
       <div>
-        <mat-form-field [style.width.px]=700 appearance="fill">
+        <mat-form-field class="formfield" appearance="fill">
           <mat-label>Kies een datum</mat-label>
-          <input matInput [matDatepicker]="picker" formControlName="datum" [(ngModel)]="schedule.datum" >
+          <input matInput [matDatepicker]="picker" formControlName="datum" [(ngModel)]="schedule.datum">
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
+        <control-messages [control]="editScheduleForm.get('datum')" class="errorMessage"></control-messages>
       </div>
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Opmerking</mat-label>
           <input matInput type="text" formControlName="opmerking" [(ngModel)]="schedule.opmerking" />
         </mat-form-field>
       </div>
-      <button class="button" mat-raised-button color="primary" type="submit">Bewerk schedule</button>
+      <button class="button" mat-raised-button color="primary" type="submit" [disabled]="!editScheduleForm.valid">Bewerk
+        schedule</button>
     </form>
   </mat-card-content>
 </mat-card>
