--- a/src/app/admin/users/add-user/add-user.component.html
+++ b/src/app/admin/users/add-user/add-user.component.html
@@ -3,25 +3,28 @@
   <mat-card-content>
     <form [formGroup]="addGebruikerForm" (ngSubmit)="onSubmit()">
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Naam</mat-label>
           <input matInput type="text" formControlName="naam" />
         </mat-form-field>
+        <control-messages [control]="addGebruikerForm.get('naam')" class="errorMessage"></control-messages>
       </div>
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Email</mat-label>
           <input matInput type="text" formControlName="email" />
         </mat-form-field>
+        <control-messages [control]="addGebruikerForm.get('email')" class="errorMessage"></control-messages>
       </div>
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Paswoord</mat-label>
           <input matInput type="password" formControlName="paswoord" />
         </mat-form-field>
+        <control-messages [control]="addGebruikerForm.get('paswoord')" class="errorMessage"></control-messages>
       </div>
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Rol</mat-label>
           <mat-select [(ngModel)]="selectedRol" formControlName="roleID">
             <mat-option *ngFor="let rol of rollen" [value]="rol.roleID">
@@ -29,8 +32,10 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <control-messages [control]="addGebruikerForm.get('roleID')" class="errorMessage"></control-messages>
       </div>
-      <button class="button" mat-raised-button color="primary" type="submit">Voeg gebruiker toe</button>
+      <button class="button" mat-raised-button color="primary" type="submit" [disabled]="!addGebruikerForm.valid">Voeg
+        gebruiker toe</button>
     </form>
   </mat-card-content>
 </mat-card>
