--- a/src/app/admin/users/edit-user/edit-user.component.html
+++ b/src/app/admin/users/edit-user/edit-user.component.html
@@ -3,19 +3,21 @@
   <mat-card-content>
     <form [formGroup]="editGebruikerForm" (ngSubmit)="onSubmit()">
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Naam</mat-label>
           <input matInput type="text" formControlName="naam" [(ngModel)]="gebruiker.naam" />
         </mat-form-field>
+        <control-messages [control]="editGebruikerForm.get('naam')" class="errorMessage"></control-messages>
       </div>
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Email</mat-label>
           <input matInput type="text" formControlName="email" [(ngModel)]="gebruiker.email" />
         </mat-form-field>
+        <control-messages [control]="editGebruikerForm.get('email')" class="errorMessage"></control-messages>
       </div>
       <div>
-        <mat-form-field [style.width.px]=700>
+        <mat-form-field class="formfield">
           <mat-label>Rol</mat-label>
           <mat-select [(ngModel)]="gebruiker.roleID" formControlName="roleID">
             <mat-option *ngFor="let rol of rollen" [value]="rol.roleID">
@@ -23,8 +25,9 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <control-messages [control]="editGebruikerForm.get('roleID')" class="errorMessage"></control-messages>
       </div>
-      <button class="button" mat-raised-button color="primary" type="submit">Bewerk gebruiker</button>
+      <button class="button" mat-raised-button color="primary" type="submit" [disabled]="!editGebruikerForm.valid">Bewerk gebruiker</button>
     </form>
   </mat-card-content>
 </mat-card>
