--- a/src/app/admin/users/users/users.component.html
+++ b/src/app/admin/users/users/users.component.html
@@ -1,7 +1,7 @@
 <h1>Gebruikers</h1>
 <div class="tableField">
   <mat-card id="card">
-    <mat-form-field>
+    <mat-form-field id="filter">
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Gebruiker" #input>
     </mat-form-field>
