--- a/src/app/admin/leveringen/edit-levering/edit-levering.component.html
+++ b/src/app/admin/leveringen/edit-levering/edit-levering.component.html
@@ -1,4 +1,4 @@
-<h1>Bewerk levering {{levering.omschrijving}}</h1>
+<h1>Bewerk levering {{levering.omschrijving}} ({{levering.leverancier.nummerplaat}})</h1>
 <mat-card id="card">
   <mat-card-content>
     <form [formGroup]="editLeveringForm" (ngSubmit)="onSubmit()">
@@ -8,6 +8,13 @@
           <input matInput type="text" formControlName="omschrijving" [(ngModel)]="levering.omschrijving" />
         </mat-form-field>
         <control-messages [control]="editLeveringForm.get('omschrijving')" class="errorMessage"></control-messages>
+      </div>
+      <div>
+        <mat-form-field class="formfield">
+          <mat-slide-toggle [(ngModel)]="levering.isCompleet" formControlName="isCompleet">Kies of de levering compleet is
+          </mat-slide-toggle>
+          <input hidden matInput type="text" />
+        </mat-form-field>
       </div>
       <div>
         <mat-form-field class="formfield">
