--- a/src/app/user/home/home.component.scss
+++ b/src/app/user/home/home.component.scss
@@ -16,6 +16,11 @@
     margin: 20px;
   }
 
+.mat-card-title{
+    color: #536dfe;
+}
 
-
-
+.mat-expansion-panel-header-description {
+    display: flex;
+    justify-content: flex-end;
+  }
