--- a/src/app/user/table/table.component.html
+++ b/src/app/user/table/table.component.html
@@ -13,9 +13,9 @@
 </mat-grid-list> -->
 
 <div class="grid-container">
-    <div id="vooruitgang" class="leveringen qvplaceholder"></div>
-    <div id="lkstatus" class="laadkade-status qvplaceholder"></div>
-    <div id="lkbedrijf" class="laadkade-bedrijf qvplaceholder"></div>
+    <div id="vooruitgang" class="afgewerkte-lev qvplaceholder"></div>
+    <div id="lkstatus" class="laadkade qvplaceholder"></div>
+    <div id="lkbedrijf" class="toegeweze-laadkade qvplaceholder"></div>
     <div class="filter">
         <div id="reload" class="qvplaceholder smallimg filter1"></div>
         <div class="filter2">
@@ -23,8 +23,8 @@
                 verwijderen</button>
         </div>
     </div>
-    <div id="actievelk" class="barchart-product qvplaceholder"></div>
-    <div id="producten" class="barchart-laadkade qvplaceholder"></div>
-    <div id="infobedrijf" class="informatie-bedrijf qvplaceholder"></div>
-    <div id="filter" class="datum-filter qvplaceholder"></div>
+    <div id="actievelk" class="bezetting qvplaceholder"></div>
+    <div id="producten" class="producten qvplaceholder"></div>
+    <div id="infobedrijf" class="levering-bedrijf qvplaceholder"></div>
+    <div id="filter" class="datum qvplaceholder"></div>
 </div>
