--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,12 @@
           <mat-nav-list>
             <a mat-list-item class="nav-item" *ngIf="loggedUser==null"><mat-icon aria-hidden="false" color="accent" >account_circle</mat-icon> Guest</a>
             <a mat-list-item class="nav-item" *ngIf="loggedUser!=null"><mat-icon aria-hidden="false" color="accent">account_circle</mat-icon> {{loggedUser.naam}}</a>
+            <hr>
+            <a mat-list-item class="nav-item" routerLink="" routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"><mat-icon aria-hidden="false" color="accent" >home</mat-icon> Home</a>
             <a mat-list-item class="nav-item" routerLink="/login" routerLinkActive="active"
                 [routerLinkActiveOptions]="{ exact: true }" *ngIf="loggedUser==null"><mat-icon color="accent" aria-hidden="false">login</mat-icon> Login</a>
-                <a mat-list-item class="nav-item" routerLink="" routerLinkActive="active"
-                [routerLinkActiveOptions]="{ exact: true }"><mat-icon aria-hidden="false" color="accent" >home</mat-icon> Home</a>
+                
             <a mat-list-item class="nav-item" *ngIf="loggedUser != null && loggedUser.roleID==3" routerLink="/table" routerLinkActive="active"
                 [routerLinkActiveOptions]="{ exact: true }"><mat-icon aria-hidden="false" color="accent">dashboard</mat-icon> Dashboard</a>
             <a mat-list-item class="nav-item" *ngIf="loggedUser != null && loggedUser.roleID==3" routerLink="/admin" routerLinkActive="active"
@@ -19,7 +21,7 @@
       </mat-sidenav>
       <mat-sidenav-content>
           <router-outlet></router-outlet>
-          <mat-card id=footer width=100%><span>&#169;</span>Linked | 2021<div id="socialmedia"><a id="twitter" href="https://twitter.com/IAbdelmalki">Volg ons op twitter</a></div></mat-card>
+          <mat-card style="margin-top: 3em;" id=footer width=100%><span>&#169;</span> Linked | {{currentDate}}<div id="socialmedia"><a id="twitter" href="https://twitter.com/IAbdelmalki">Volg ons op twitter</a></div></mat-card>
       </mat-sidenav-content>
   </mat-sidenav-container>
 </nav>
