--- a/src/app/planning-admin/planning/planning.component.html
+++ b/src/app/planning-admin/planning/planning.component.html
@@ -70,6 +70,8 @@
                     Afkomstig van leverancier {{levering.leverancier.code}} ({{levering.leverancier.bedrijf.naam}})
                   </mat-panel-description>
                 </mat-expansion-panel-header>
+                <h3>Omschrijving</h3>
+                <p>{{levering.omschrijving}}</p>
                 <h2>Producten</h2>
                 <button (click)="viewProducts(levering.leveringID)" class="EditButton"
                   *ngIf="productenOfLevering == null" mat-stroked-button color="accent">BEKIJK
@@ -96,33 +98,34 @@
           <mat-card-content>
             <form [formGroup]="addScheduleForm" (ngSubmit)="onSubmit()">
               <div>
-                <mat-form-field [style.width.px]=700 appearance="fill">
+                <mat-form-field class="formfield" appearance="fill">
                   <mat-label>Kies een datum</mat-label>
                   <input matInput [matDatepicker]="picker" formControlName="datum">
                   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                   <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
+                <control-messages [control]="addScheduleForm.get('datum')" class="errorMessage"></control-messages>
               </div>
               <div>
-                <mat-form-field [style.width.px]=700>
+                <mat-form-field class="formfield">
                   <mat-label>Opmerking</mat-label>
                   <input matInput type="text" formControlName="opmerking" />
                 </mat-form-field>
               </div>
-              <button class="button" mat-raised-button color="primary" type="submit" *ngIf="!planningAdded">Voeg
+              <button class="button" mat-raised-button color="primary" type="submit" *ngIf="!planningAdded"  [disabled]="!addScheduleForm.valid">Voeg
                 leveringen toe</button>
             </form>
             <div id="leveringenContainer" *ngIf="planningAdded">
               <h2>Voeg leveringen toe aan deze planning</h2>
               <form [formGroup]="addLeveringForm" (ngSubmit)="onLeveringSubmit()">
                 <div>
-                  <mat-form-field [style.width.px]=700>
+                  <mat-form-field class="formfield">
                     <mat-label>Omschrijving</mat-label>
                     <input matInput type="text" formControlName="omschrijving" />
                   </mat-form-field>
                 </div>
                 <div>
-                  <mat-form-field [style.width.px]=700>
+                  <mat-form-field class="formfield">
                     <mat-label>Laadkade</mat-label>
                     <mat-select formControlName="laadkadeID">
                       <mat-option *ngFor="let laadkade of laadkades" [value]="laadkade.laadkadeID">
@@ -130,9 +133,10 @@
                       </mat-option>
                     </mat-select>
                   </mat-form-field>
+                  <control-messages [control]="addLeveringForm.get('laadkadeID')" class="errorMessage"></control-messages>
                 </div>
                 <div>
-                  <mat-form-field [style.width.px]=700>
+                  <mat-form-field class="formfield">
                     <mat-label>Leverancier</mat-label>
                     <mat-select formControlName="leverancierID">
                       <mat-option *ngFor="let leverancier of leveranciers" [value]="leverancier.leverancierID">
@@ -140,8 +144,9 @@
                       </mat-option>
                     </mat-select>
                   </mat-form-field>
+                  <control-messages [control]="addLeveringForm.get('leverancierID')" class="errorMessage"></control-messages>
                 </div>
-                <button class="button" mat-raised-button color="primary" type="submit" *ngIf="!leveringAdded">Voeg
+                <button class="button" mat-raised-button color="primary" type="submit" *ngIf="!leveringAdded"  [disabled]="!addLeveringForm.valid">Voeg
                   producten toe</button>
               </form>
             </div>
@@ -149,12 +154,13 @@
               <h2>Voeg producten toe aan deze levering</h2>
               <form [formGroup]="addProductForm" (ngSubmit)="onSubmitProduct()">
                 <div>
-                  <mat-form-field [style.width.px]=700>
+                  <mat-form-field class="formfield">
                     <mat-label>Naam</mat-label>
                     <input matInput type="text" formControlName="naam" />
                   </mat-form-field>
+                  <control-messages [control]="addProductForm.get('naam')" class="errorMessage"></control-messages>
                 </div>
-                <button class="button" mat-raised-button color="primary" type="submit">Voeg product toe</button>
+                <button class="button" mat-raised-button color="primary" type="submit"  [disabled]="!addProductForm.valid">Voeg product toe</button>
                 <button class="button" mat-raised-button color="accent" (click)="makeNewLevering()">Voeg nog een
                   levering toe</button>
               </form>
