--- a/src/app/planning-admin/planning/planning.component.scss
+++ b/src/app/planning-admin/planning/planning.component.scss
@@ -35,3 +35,13 @@
 .button{
   margin: 15px 15px 0 0;
 }
+
+.formfield {
+  width: 32vw;
+  max-width: 700px;
+  margin-bottom: -10px;
+}
+.errorMessage {
+  color: red;
+  text-align: left;
+}
