more layout fixes

--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -57,11 +57,11 @@
     </mat-card>
     <mat-card class="navCard voorlaatste">
         <mat-card-header>
-            <mat-card-title>Beheer schedules</mat-card-title>
-            <mat-card-subtitle>Ga naar de beheerspagina voor de schedules</mat-card-subtitle>
+            <mat-card-title>Beheer planningen</mat-card-title>
+            <mat-card-subtitle>Ga naar de beheerspagina voor de planningen</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <div class="btncenter"><button (click)="toSchedules()" mat-raised-button color="accent">Schedules</button></div>
+            <div class="btncenter"><button (click)="toSchedules()" mat-raised-button color="accent">Planningen</button></div>
         </mat-card-actions>
     </mat-card>
     <mat-card class="navCard">
