--- a/src/app/admin/admin_style.scss
+++ b/src/app/admin/admin_style.scss
@@ -36,11 +36,11 @@ mat-card-content {
 }
 
 .EditButton{
-  margin-right: 10px;
+  margin: 10px;
 }
 
 .addButton {
-  margin-bottom: 25px;
+  margin: 10px;
 }
 
 td,
