--- a/src/app/admin/leveringen/leveringen/leveringen.component.html
+++ b/src/app/admin/leveringen/leveringen/leveringen.component.html
@@ -31,14 +31,11 @@
 
         <!-- leverancier Column -->
         <ng-container matColumnDef="leverancier">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Code Leverancier </th>
-            <td mat-cell *matCellDef="let row"> {{row.leverancier.code}} </td>
-        </ng-container>
-
-        <!-- nummerplaat Column -->
-        <ng-container matColumnDef="nummerplaat">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nummerplaat Leverancier </th>
-            <td mat-cell *matCellDef="let row"> {{row.leverancier.nummerplaat}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Leverancier </th>
+            <td mat-cell *matCellDef="let row"> {{row.leverancier.code}}
+              <div *ngIf="row.leverancier.nummerplaat != null">- {{row.leverancier.nummerplaat}}</div>
+              <div *ngIf="row.leverancier.nummerplaat == null">- Nummerplaat ongekend</div>
+            </td>
         </ng-container>
 
          <!-- bedrijf Column -->
