--- a/src/app/admin/leveringen/leveringen/leveringen.component.scss
+++ b/src/app/admin/leveringen/leveringen/leveringen.component.scss
@@ -1,3 +1,13 @@
 #card {
     width: 75%;
 }
+
+.mat-column-laadkade {
+  width: 10%;
+}
+.mat-column-schedule {
+  width: 14%;
+}
+.mat-column-leverancier {
+  width: 14%;
+}
