--- a/src/app/admin/schedules/schedules/schedules.component.html
+++ b/src/app/admin/schedules/schedules/schedules.component.html
@@ -1,9 +1,9 @@
-<h1>Schedules</h1>
+<h1>Planningen</h1>
 <div class="tableField">
   <mat-card id="card">
     <mat-form-field id="filter">
       <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Schedule" #input>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Planning" #input>
     </mat-form-field>
 
     <div><button class="addButton" (click)="addSchedule()" mat-raised-button color="accent">VOEG TOE</button></div>
