--- a/src/app/admin/schedules/add-schedule/add-schedule.component.html
+++ b/src/app/admin/schedules/add-schedule/add-schedule.component.html
@@ -1,4 +1,4 @@
-<h1>Voeg schedule toe</h1>
+<h1>Voeg planning toe</h1>
 <mat-card id="card">
   <mat-card-content>
     <form [formGroup]="addScheduleForm" (ngSubmit)="onSubmit()">
@@ -17,7 +17,7 @@
           <input matInput type="text" formControlName="opmerking" />
         </mat-form-field>
       </div>
-      <button class="button" mat-raised-button color="primary" type="submit" [disabled]="!addScheduleForm.valid">Voeg schedule toe</button>
+      <button class="button" mat-raised-button color="primary" type="submit" [disabled]="!addScheduleForm.valid">Voeg planning toe</button>
     </form>
   </mat-card-content>
 </mat-card>
