--- a/src/app/admin/schedules/edit-schedule/edit-schedule.component.html
+++ b/src/app/admin/schedules/edit-schedule/edit-schedule.component.html
@@ -1,4 +1,4 @@
-<h1>Bewerk schedule van {{schedule.datum | date:'dd/MM/yyyy'}}</h1>
+<h1>Bewerk planning van {{schedule.datum | date:'dd/MM/yyyy'}}</h1>
 <mat-card id="card">
   <mat-card-content>
     <form [formGroup]="editScheduleForm" (ngSubmit)="onSubmit()">
@@ -18,7 +18,7 @@
         </mat-form-field>
       </div>
       <button class="button" mat-raised-button color="primary" type="submit" [disabled]="!editScheduleForm.valid">Bewerk
-        schedule</button>
+        planning</button>
     </form>
   </mat-card-content>
 </mat-card>
