--- a/src/app/admin/leveringen/leveringen/leveringen.component.html
+++ b/src/app/admin/leveringen/leveringen/leveringen.component.html
@@ -7,7 +7,20 @@
     </mat-form-field>
 
     <div><button class="addButton" (click)="addLevering()" mat-raised-button color="accent">VOEG TOE</button></div>
+    <div>
+      <mat-form-field appearance="fill">
+        <mat-label>Enter a date range</mat-label>
+        <mat-date-range-input  [formGroup]="range" [rangePicker]="picker">
+          <input matStartDate formControlName="start" placeholder="Start date">
+          <input matEndDate (dateChange)="getLeveringen()"  formControlName="end" placeholder="End date">
+        </mat-date-range-input>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
 
+        <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+        <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+      </mat-form-field>
+    </div>
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource" matSort>
 
@@ -19,41 +32,41 @@
 
         <!-- laadkade Column -->
         <ng-container matColumnDef="laadkade">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Laadkade </th>
-            <td mat-cell *matCellDef="let row"> {{row.laadkade.nummer}} </td>
-          </ng-container>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Laadkade </th>
+          <td mat-cell *matCellDef="let row"> {{row.laadkade.nummer}} </td>
+        </ng-container>
 
         <!-- schedule Column -->
         <ng-container matColumnDef="schedule">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Schedule </th>
-            <td mat-cell *matCellDef="let row"> {{row.schedule.datum | date:'dd/MM/yyyy @ HH:mm'}} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Schedule </th>
+          <td mat-cell *matCellDef="let row"> {{row.schedule.datum | date:'dd/MM/yyyy @ HH:mm'}} </td>
         </ng-container>
 
         <!-- leverancier Column -->
         <ng-container matColumnDef="leverancier">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Code Leverancier </th>
-            <td mat-cell *matCellDef="let row"> {{row.leverancier.code}} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Code Leverancier </th>
+          <td mat-cell *matCellDef="let row"> {{row.leverancier.code}} </td>
         </ng-container>
 
         <!-- nummerplaat Column -->
         <ng-container matColumnDef="nummerplaat">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nummerplaat Leverancier </th>
-            <td mat-cell *matCellDef="let row"> {{row.leverancier.nummerplaat}} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Nummerplaat Leverancier </th>
+          <td mat-cell *matCellDef="let row"> {{row.leverancier.nummerplaat}} </td>
         </ng-container>
 
-         <!-- bedrijf Column -->
-         <ng-container matColumnDef="bedrijf">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Bedrijf </th>
-            <td mat-cell *matCellDef="let row"> {{row.leverancier.bedrijf.naam}} </td>
+        <!-- bedrijf Column -->
+        <ng-container matColumnDef="bedrijf">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Bedrijf </th>
+          <td mat-cell *matCellDef="let row"> {{row.leverancier.bedrijf.naam}} </td>
         </ng-container>
 
         <!-- Delete levering Column -->
         <ng-container matColumnDef="deleteLevering">
           <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-          <td mat-cell *matCellDef="let row"> <button (click)="editLevering(row.leveringID)" class="EditButton" mat-raised-button
-              color="primary">BEWERK</button>
-              <button (click)="deleteLevering(row.leveringID)" mat-raised-button
-              color="accent">VERWIJDER</button> </td>
+          <td mat-cell *matCellDef="let row"> <button (click)="editLevering(row.leveringID)" class="EditButton"
+              mat-raised-button color="primary">BEWERK</button>
+            <button (click)="deleteLevering(row.leveringID)" mat-raised-button color="accent">VERWIJDER</button>
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
