--- a/src/app/admin/leveringen/leveringen/leveringen.component.scss
+++ b/src/app/admin/leveringen/leveringen/leveringen.component.scss
@@ -3,11 +3,21 @@
 }
 
 .mat-column-laadkade {
-  width: 10%;
+    width: 10%;
 }
+
 .mat-column-schedule {
-  width: 14%;
+    width: 14%;
 }
+
 .mat-column-leverancier {
-  width: 14%;
+    width: 14%;
+}
+
+.mat-column-bedrijf {
+    width: 14%;
+}
+
+.mat-column-status {
+    width: 10%;
 }
