--- a/src/app/admin/bedrijven/bedrijven/bedrijven.component.html
+++ b/src/app/admin/bedrijven/bedrijven/bedrijven.component.html
@@ -1,41 +1,54 @@
 <h1>Bedrijven</h1>
 <div class="tableField">
-  <mat-card id="card">
-    <mat-form-field id="filter">
-      <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Bedrijf" #input>
-    </mat-form-field>
+    <mat-card id="card">
+        <mat-form-field id="filter">
+            <mat-label>Filter</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Bedrijf" #input>
+        </mat-form-field>
 
-    <div><button class="addButton" (click)="addBedrijf()" mat-raised-button color="accent">VOEG TOE</button></div>
+        <div><button class="addButton" (click)="addBedrijf()" mat-raised-button color="accent">VOEG TOE</button></div>
 
-    <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort>
+        <div class="mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource" matSort>
 
-        <!-- Naam Column -->
-        <ng-container matColumnDef="naam">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Naam </th>
-          <td mat-cell *matCellDef="let row"> {{row.naam}} </td>
-        </ng-container>
+                <!-- Naam Column -->
+                <ng-container matColumnDef="naam">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Naam </th>
+                    <td mat-cell *matCellDef="let row"> {{row.naam}} </td>
+                </ng-container>
+                <!-- Naam Column -->
+                <ng-container matColumnDef="adres">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Adres </th>
+                    <td mat-cell *matCellDef="let row"> {{row.adres}} </td>
+                </ng-container>
+                <!-- Naam Column -->
+                <ng-container matColumnDef="btwNummer">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Btw Nummer </th>
+                    <td mat-cell *matCellDef="let row"> {{row.btwNummer}} </td>
+                </ng-container>
+                <!-- Naam Column -->
+                <ng-container matColumnDef="email">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+                    <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+                </ng-container>
 
-        <!-- Delete bedrijf Column -->
-        <ng-container matColumnDef="deleteBedrijf">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-          <td mat-cell *matCellDef="let row"> <button (click)="editBedrijf(row.bedrijfID)" class="EditButton" mat-raised-button
-              color="primary">BEWERK</button>
-              <button (click)="deleteBedrijf(row.bedrijfID)" mat-raised-button
-              color="accent">VERWIJDER</button> </td>
-        </ng-container>
+                <!-- Delete bedrijf Column -->
+                <ng-container matColumnDef="deleteBedrijf">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+                    <td mat-cell *matCellDef="let row"> <button (click)="editBedrijf(row.bedrijfID)" class="EditButton" mat-raised-button color="primary">BEWERK</button>
+                        <button (click)="deleteBedrijf(row.bedrijfID)" mat-raised-button color="accent">VERWIJDER</button> </td>
+                </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns" id="tableHeader"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns" id="tableHeader"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">Geen bedrijven gevonden met de filter "{{input.value}}"</td>
-        </tr>
-      </table>
+                <!-- Row shown when there is no matching data. -->
+                <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" colspan="4">Geen bedrijven gevonden met de filter "{{input.value}}"</td>
+                </tr>
+            </table>
 
-      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-    </div>
-  </mat-card>
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+        </div>
+    </mat-card>
 </div>
