--- a/src/app/admin/leveringen/leveringen/leveringen.component.html
+++ b/src/app/admin/leveringen/leveringen/leveringen.component.html
@@ -1,68 +1,74 @@
 <h1>Leveringen</h1>
 <div class="tableField">
-  <mat-card id="card">
-    <mat-form-field id="filter">
-      <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Levering" #input>
-    </mat-form-field>
+    <mat-card id="card">
+        <mat-form-field id="filter">
+            <mat-label>Filter</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Levering" #input>
+        </mat-form-field>
 
-    <div><button class="addButton" (click)="addLevering()" mat-raised-button color="accent">VOEG TOE</button></div>
+        <div><button class="addButton" (click)="addLevering()" mat-raised-button color="accent">VOEG TOE</button></div>
 
-    <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort>
+        <div class="mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource" matSort>
 
-        <!-- omschrijving Column -->
-        <ng-container matColumnDef="omschrijving">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Omschrijving </th>
-          <td mat-cell *matCellDef="let row"> {{row.omschrijving}} </td>
-        </ng-container>
+                <!-- omschrijving Column -->
+                <ng-container matColumnDef="omschrijving">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Omschrijving </th>
+                    <td mat-cell *matCellDef="let row"> {{row.omschrijving}} </td>
+                </ng-container>
 
-        <!-- laadkade Column -->
-        <ng-container matColumnDef="laadkade">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Laadkade </th>
-            <td mat-cell *matCellDef="let row"> {{row.laadkade.nummer}} </td>
-          </ng-container>
+                <!-- laadkade Column -->
+                <ng-container matColumnDef="laadkade">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Laadkade </th>
+                    <td mat-cell *matCellDef="let row"> {{row.laadkade.nummer}} </td>
+                </ng-container>
 
-        <!-- schedule Column -->
-        <ng-container matColumnDef="schedule">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Schedule </th>
-            <td mat-cell *matCellDef="let row"> {{row.schedule.datum | date:'dd/MM/yyyy @ HH:mm'}} </td>
-        </ng-container>
+                <!-- schedule Column -->
+                <ng-container matColumnDef="schedule">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Schedule </th>
+                    <td mat-cell *matCellDef="let row"> {{row.schedule.datum | date:'dd/MM/yyyy @ HH:mm'}} </td>
+                </ng-container>
 
-        <!-- leverancier Column -->
-        <ng-container matColumnDef="leverancier">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Leverancier </th>
-            <td mat-cell *matCellDef="let row"> {{row.leverancier.code}}
-              <div *ngIf="row.leverancier.nummerplaat != null">- {{row.leverancier.nummerplaat}}</div>
-              <div *ngIf="row.leverancier.nummerplaat == null">- Nummerplaat ongekend</div>
-            </td>
-        </ng-container>
+                <!-- leverancier Column -->
+                <ng-container matColumnDef="leverancier">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Leverancier </th>
+                    <td mat-cell *matCellDef="let row"> {{row.leverancier.code}}
+                        <div *ngIf="row.leverancier.nummerplaat != null">- {{row.leverancier.nummerplaat}}</div>
+                        <div *ngIf="row.leverancier.nummerplaat == null">- Nummerplaat ongekend</div>
+                    </td>
+                </ng-container>
 
-         <!-- bedrijf Column -->
-         <ng-container matColumnDef="bedrijf">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Bedrijf </th>
-            <td mat-cell *matCellDef="let row"> {{row.leverancier.bedrijf.naam}} </td>
-        </ng-container>
+                <!-- bedrijf Column -->
+                <ng-container matColumnDef="bedrijf">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Bedrijf </th>
+                    <td mat-cell *matCellDef="let row"> {{row.leverancier.bedrijf.naam}} </td>
+                </ng-container>
 
-        <!-- Delete levering Column -->
-        <ng-container matColumnDef="deleteLevering">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-          <td mat-cell *matCellDef="let row"> <button (click)="editLevering(row.leveringID)" class="EditButton" mat-raised-button
-              color="primary">BEWERK</button>
-              <button (click)="deleteLevering(row.leveringID)" mat-raised-button
-              color="accent">VERWIJDER</button> </td>
-        </ng-container>
+                <!-- status Column -->
+                <ng-container matColumnDef="status">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Compleet </th>
+                    <td mat-cell *matCellDef="let row">
+                        <mat-slide-toggle [(ngModel)]="row.isCompleet" [disabled]="true"></mat-slide-toggle>
+                    </td>
+                </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <!-- Delete levering Column -->
+                <ng-container matColumnDef="deleteLevering">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+                    <td mat-cell *matCellDef="let row"> <button (click)="editLevering(row.leveringID)" class="EditButton" mat-raised-button color="primary">BEWERK</button>
+                        <button (click)="deleteLevering(row.leveringID)" mat-raised-button color="accent">VERWIJDER</button> </td>
+                </ng-container>
 
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">Geen leveringen gevonden met de filter "{{input.value}}"</td>
-        </tr>
-      </table>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-    </div>
-  </mat-card>
+                <!-- Row shown when there is no matching data. -->
+                <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" colspan="4">Geen leveringen gevonden met de filter "{{input.value}}"</td>
+                </tr>
+            </table>
+
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+        </div>
+    </mat-card>
 </div>
