--- a/src/app/admin/bedrijven/add-bedrijf/add-bedrijf.component.html
+++ b/src/app/admin/bedrijven/add-bedrijf/add-bedrijf.component.html
@@ -23,7 +23,7 @@
 
         <mat-form-field class="formfield">
           <mat-label>Email</mat-label>
-          <input matInput type="text" formControlName="email" />
+          <input matInput type="email" formControlName="email" />
         </mat-form-field>
         <control-messages [control]="addBedrijfForm.get('email')" class="errorMessage"></control-messages>
       </div>
