--- a/src/app/admin/leveringen/leveringen/leveringen.component.html
+++ b/src/app/admin/leveringen/leveringen/leveringen.component.html
@@ -9,7 +9,7 @@
         <div><button class="addButton" (click)="addLevering()" mat-raised-button color="accent">VOEG TOE</button></div>
         <div>
             <mat-form-field appearance="fill">
-                <mat-label>Enter a date range</mat-label>
+                <mat-label>Sorteer op datum</mat-label>
                 <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
                     <input matStartDate formControlName="start" placeholder="Start date">
                     <input matEndDate (dateChange)="getLeveringenByDateRange()" formControlName="end" placeholder="End date">
