--- a/src/app/admin/schedules/schedules/schedules.component.html
+++ b/src/app/admin/schedules/schedules/schedules.component.html
@@ -7,7 +7,20 @@
     </mat-form-field>
 
     <div><button class="addButton" (click)="addSchedule()" mat-raised-button color="accent">VOEG TOE</button></div>
+    <div>
+      <mat-form-field appearance="fill">
+          <mat-label>Sorteer op datum</mat-label>
+          <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+              <input matStartDate formControlName="start" placeholder="Start date">
+              <input matEndDate (dateChange)="getSchedulesByDateRange()" formControlName="end" placeholder="End date">
+          </mat-date-range-input>
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-date-range-picker #picker></mat-date-range-picker>
 
+          <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+          <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+      </mat-form-field>
+  </div>
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
 
